<resources>
    <string name="app_name">Kontacts</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_login">Login</string>
    <string name="action_singup">Sign up</string>
    <string name="user_name">Name</string>
    <string name="user_phone_number">Phonenumber</string>
    <string name="action_text_create">Create User</string>
    <string name="action_text_edit">Edit User</string>
    <string name="preference_user_info">none</string>
    <string name="preference_is_logged_in">no</string>
    <string name="action_delete">Delete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_title">Create New Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_subtitle">to continue to Kontacts</string>
    <string name="sign_up_prompt">Don\'t have an account ?</string>
    <string name="empty_string">Wow, such empty \n Go ahead and save your first contact</string>
</resources>
