<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout2">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="124dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="36sp" android:fontFamily="@font/pacifico"
            android:textColor="#1a73e8"
    />
    <TextView
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="@font/lato" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/sign_in_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/lato" android:textSize="16sp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#1a73e8"
            app:passwordToggleEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_login_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:paddingStart="10dp"
                android:fontFamily="@font/lato"
                android:textColor="#202124"
                />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:id="@+id/textInputLayout2"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#1a73e8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:helperText="Password should contain atleast one A-Z, a-z and 0-9">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_login_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" android:singleLine="true" android:inputType="textPassword"
                android:paddingStart="10dp" android:fontFamily="@font/lato"
                android:textColorHighlight="#1a73e8"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
            android:text="@string/action_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintCircleRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:onClick="onClickLogin"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginStart="24dp">
        <TextView
                android:text="@string/sign_up_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_signup_hint"
                android:fontFamily="@font/lato"
                android:textColor="#202124"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/material_text_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_singup"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:onClick="displaySignUpDialog"
                android:gravity="start|center_vertical" app:rippleColor="@null"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>