<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/linearLayout3">


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout_username" android:layout_marginTop="8dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textInputLayout_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:fontFamily="@font/lato" android:inputType="textPersonName" android:maxLength="10"
                android:maxLines="1" android:singleLine="true" android:imeOptions="actionNext"
                android:id="@+id/editText_userName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout_email" app:layout_constraintTop_toBottomOf="@+id/textInputLayout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/lato" android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" android:imeOptions="flagNavigateNext" android:id="@+id/editText_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout5" app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true" app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/lato" android:inputType="textPassword" android:singleLine="true"
                android:imeOptions="actionNext" android:id="@+id/editText_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout6" app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginTop="8dp" app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/lato" android:inputType="textPassword" android:singleLine="true"
                android:imeOptions="actionGo|actionSend" android:id="@+id/editText_rePassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_singup"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/btn_signup" app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:onClick="onClickSignup"
            android:visibility="visible"/>
    <TextView
            android:text="@string/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_dialog_title" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:textSize="18sp" android:fontFamily="@font/nunito_sans_bold" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>