<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="150dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:id="@+id/bottom_sheet" app:layout_constraintCircleRadius="5dp" android:theme="@style/AppTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topConstraintview" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp">
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_close_sheet"
                app:srcCompat="@drawable/ic_close_grey"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:id="@+id/txt_bottom_sheet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_text_create"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="bold" android:textColor="#5B585C" android:fontFamily="@font/lato"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/btn_close_sheet"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/action_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFFFFFFF"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/lato"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/action_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFFFFFFF"
                android:backgroundTint="@color/danger_red"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/lato"
                android:visibility="gone"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#1a73e8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/topConstraintview"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/user_name">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_user_name"
                android:singleLine="true" android:imeOptions="actionNext"
                android:fontFamily="@font/lato" android:textColorHighlight="#673AB7"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputOne" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#1a73e8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingBottom="75dp" android:hint="@string/user_phone_number">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_user_phone_number"
                android:imeOptions="actionDone" android:inputType="phone"
                android:singleLine="true" android:fontFamily="@font/lato"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
